...
            android:textSize="22dp"

            android:textColor="@color/colorMarrom"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_senha_input"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/senha_text"
            android:layout_toEndOf="@+id/login_text"
            android:layout_toRightOf="@+id/login_text"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/login_user_input"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qr_car_image"
            android:layout_toEndOf="@+id/login_text"
            android:layout_toRightOf="@+id/login_text"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/login_entrar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_senha_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:background="@color/colorSalmao"
            android:fontFamily="sans-serif"
            android:text="Entrar"
            android:textColor="@color/colorWhite"
            android:textSize="22dp"
            android:textStyle="bold" />/>

    </RelativeLayout>
</LinearLayout>
