...

            android:background="@color/colorSalmao"
            android:text="CARROS"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/contratos_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@color/colorSalmao"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="130dp"
            android:text="CONTRATOS"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/funcionarios_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
...
